<resources>
    <string name="app_name">IMDbApp</string>
    <string name="welcome_message">Hello World!</string>
    <string name="social_text">O podes ingresar con</string>
    <string name="registration_text">¿No tenes cuenta? <b><a href="http://www.google.com">Regístrate</a></b></string>
    <string name="login_guest"><a href="http://www.google.com">Continuar como Invitado</a></string>
    <string name="login_button">Login</string>
    <string name="pass_field_label">Contraseña</string>
    <string name="user_field_label">Usuario</string>
    <string name="search_hint">Buscar IMDB</string>
    <string name="movie1_name">Dune</string>
    <string name="movie2_name">MadMax</string>
    <string name="movie3_name">Batman</string>
    <string name="movie1_synopsis">Película de ciencia ficción con implicaciones geopolíticas y ambientales</string>
    <string name="movie2_synopsis">Carrera en futuro distópico</string>
    <string name="movie3_synopsis">Super héroe son inteligencia y apariencia de murciélago</string>
    <string name="movie_name_default">Movie Name</string>
    <string name="movie_year_default">Year of Movie</string>
    <string name="movie_image_contentDescription">Movie Image</string>
    <string name="movie4_synopsis">Locura e inmortalidad se juntan con la comedia</string>
    <string name="movie4_actors">Ryan Reynolds, Morena Baccarin, Josh Brolin</string>
    <string name="movie3_actors">Robert Pattinson, Zoë Kravitz</string>
    <string name="movie2_actors">Tom Hardy, Charlize Theron</string>
    <string name="movie1_actors">Timothée Chalamet, Zendaya</string>
    <string name="movie4_name">Deadpool</string>
    <string name="movie5_name">Spider-Man: No Way Home</string>
    <string name="movie5_synopsis">Un chico con traje de lencería intentando salvar el mundo</string>
    <string name="movie5_actors">Tom Holland, Benedict Cumberbatch, Tobey Maguire</string>
    <string name="movie_actors_default">Movie Actors</string>
    <string name="imdb_logo_description">Imdb logo</string>
    <string name="login_frament_starting_text">Login blank fragment</string>
    <string name="access_name_label">Nombre</string>
    <string name="access_mail_label">Correo electrónico</string>
    <string name="access_pass_label">Contraseña</string>
    <string name="access_confirmation_button_text">Aceptar</string>
    <string name="pass_helper_instruction">La contraseña debe contener 8 caracteres</string>
    <string name="account_creation">Crear una cuenta</string>
    <string name="menu_start">Inicio</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_play">Play</string>
    <string name="menu_name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie6_name">The Queens Gambit</string>
    <string name="movie6_actors">Anya Taylor-Joy, Thomas Brodie-Sangster</string>
    <string name="movie6_synopsis">Ambientada en plena Guerra Fría, Gambito de Dama sigue a Beth Harmon, una huérfana de Kentucky con un increíble don para el ajedrez que lucha contra las adicciones mientras trata de convertirse en la mejor jugadora del mundo. La serie recorre la vida de la joven desde su niñez, cuando aprende a jugar al ajedrez con tan solo ocho años en el orfanato donde se ha criado; hasta su adolescencia, donde la chica prodigio atraviesa torneos regionales y nacionales.</string>
    <string name="movie7_name">Stranger Things</string>
    <string name="movie7_synopsis">A raíz de la desaparición de un niño, un pueblo desvela un misterio relacionado con experimentos secretos, fuerzas sobrenaturales aterradoras y una niña muy extraña.</string>
    <string name="movie7_actors">Winona Ryder, Millie Bobby, Finn Wolfhard</string>
    <string name="profile_photo_description">Foto de perfil</string>
    <string name="user_name">Daniel Cano</string>
    <string name="settings_symbol_description">Simbolo de configuracion</string>
    <string name="card_internal_text">Calificar y obtener recomendaciones</string>
    <string name="card_ratings_text">Calificaciones</string>
    <string name="card_numberof_ratings">0</string>
    <string name="follow_list_title">Lista de seguimiento</string>
    <string name="follow_list_details">Crea una lista de seguimiento para no perderte ninguna película o serie de tv</string>
    <string name="follow_list_button">Empieza tu lista de seguimiento</string>
    <string name="recent_views_title">Vistas Recientes</string>
    <string name="recent_views_details">No has visitado ninguna página recientemente</string>
    <string name="favourite_persons_title">Personas favoritas</string>
    <string name="favorite_persons_details">No has añadido ninguna persona recientemente</string>
    <string name="default_spanish_name">Default Spanish Name</string>
    <string name="default_original_english_name">Original english name</string>
    <string name="default_original_title">(titulo original)</string>
    <string name="movie_scene_description">Escena de la película</string>
    <string name="thumbnail_image_description">Imagen de carátula de la película</string>
    <string name="movie_category">Drama</string>
    <string name="star_logo_description">Logo de estrella</string>
    <string name="default_rating">5.0</string>
    <string name="default_synopsis_text">Default Synopsis text</string>
    <string name="episode_guide_title">Guía de Episodios</string>
    <string name="follow_add_list_button">Agregar a mi lista de seguimiento</string>
    <string name="play_logo_description">Logo reproducción</string>
    <string name="recommended_movie_series_title">Stranger Things</string>
    <string name="preview_content_details">Trailer Oficial</string>
    <string name="recycler_view_title">Las mejores selecciones</string>
    <string name="preference_user_name">Nombre por defecto</string>
    <string name="preferences">userPreferences</string>
    <string name="default_username">Invitado</string>
    <string name="empty_name_error">Por favor introducir el Nombre</string>
    <string name="empty_mail_error">Por favor introducir Email</string>
    <string name="empty_password_error">Por favor introducir contraseña</string>
    <string name="short_password_error">La contraseña debe tener por lo menos 8 caracteres</string>
    <string name="not_valid_email_error">Email no válido</string>
    <string name="preexistent_user_error">Un usuario con ese correo electrónico ya existe</string>
    <string name="registering_problem_error">Hubo un problema al intentar registrar</string>
    <string name="user_validation_exception">error de userValidationUseCase</string>
    <string name="not_valid_credentials">Usuario o credenciales no válidas</string>
</resources>