<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".uilayer.uielements.access.RegistrationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/multiplier_65dp"
        android:layout_height="@dimen/multiplier_34dp"
        android:layout_marginStart="@dimen/multiplier_12dp"
        android:contentDescription="@string/imdb_logo_description"
        android:src="@drawable/ic_imdb_logo_2016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/multiplier_6dp"
        android:layout_marginEnd="@dimen/multiplier_6dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/multiplier_20dp"
            android:text="@string/account_creation"
            android:textSize="@dimen/multiplier_12sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameTextInputLayout"
            style="@style/RegistrationTextFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/access_name_label"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmailTextInputLayout"
            style="@style/RegistrationTextFields"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/access_mail_label"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPassTextInputLayout"
            style="@style/RegistrationTextFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/access_pass_label"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperText="@string/pass_helper_instruction"
            app:helperTextEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/userEmailTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmationButton"
            style="@style/AccessButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_confirmation_button_text"
            app:layout_constraintTop_toBottomOf="@+id/userPassTextInputLayout" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>